--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stomp/stompjs": "^7.0.0",
     "@tabler/icons": "^2.5.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/stompjs": "^2.3.5",
     "@types/styled-components": "^5.1.26",
     "dayjs": "^1.11.7",
     "eslint": "8.34.0",
@@ -34,6 +34,7 @@
     "recharts": "^2.4.3",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "ws": "^8.12.1"
   }
 }
