--- a/.gitignore
+++ b/.gitignore
@@ -193,7 +193,7 @@ web_modules/
 # dotenv environment variables file
 .env
 .env.test
-
+.env.prod
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
